Changed styling of website link buttons on the project about page. The buttons are now aligned with the bottom of the page and styled using the correct colors. Done as part of refactoring the frontend as mentioned in #21

--- a/src/website/page_content/style.css
+++ b/src/website/page_content/style.css
@@ -193,7 +193,6 @@
 	font-family: 'Fjalla One', sans-serif;
 	text-align: center;
 	margin-bottom: 2rem;
-
 }
 
 .source_box
@@ -203,7 +202,7 @@
 	border-radius: 0.5rem;
 	padding-left: 2rem;
 	padding-right: 2rem;
-	padding-bottom: 2rem;
+	padding-bottom: 3.5rem;
 	margin: 2rem;
 }
 
